ml_ops/91/k8s/predict.yml
---
# Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict-pod
  labels:
    app: predict-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predict-pod
  template:
    metadata:
      labels:
        app: predict-pod
    spec:
      containers:
      - name: predict-container
        image: 735015535886.dkr.ecr.us-west-2.amazonaws.com/predict-server-image-eks:latest
        command: ["/bin/sh","-c"]
        args: ["gunicorn app:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:5001 --workers 1 --threads 1 --backlog 256 --reload"]
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: predict-server
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
#    service.beta.kubernetes.io/aws-load-balancer-type: nlb
#    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: eipalloc-022b9722973f6a222
spec:
  type: NodePort
#  type: LoadBalancer
#  loadBalancerIP: 44.225.109.227   # IP アドレス固定
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    app: predict-pod
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: predict-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: predict-server
            port:
              number: 5001
